plugins {
    id 'java'
    id 'application'
}

application {
    mainClassName = 'refactoring.Main'
}

compileJava {
    options.compilerArgs += ['--enable-preview']
    options.release = 14
}
tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(14)
    }
}

// Make a fat Jar
jar {
    manifest {
        attributes 'Main-Class': 'refactoring.Main',
                   'Class-Path': 'absfrontend.jar'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

// For now this should work, but the build should depend on
// the source of the git repo; fetch, build and use.

repositories {
    flatDir {
        dirs 'libs'
    }
}

dependencies {
    testImplementation 'junit:junit:4.13.1'
    testImplementation group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
    //implementation 'info.picocli:picocli:4.5.2'
    //annotationProcessor 'info.picocli:picocli-codegen:4.5.2'
    implementation files('libs/absfrontend.jar')
}

// Needed for the preview features like pattern matching instanceof
tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

